--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   firebase_auth: ^3.3.9
   google_sign_in: ^5.2.4
   firebase_core: ^1.13.1
+  firebase_database: ^9.0.8
+  http: ^0.13.4
+  
 
 dev_dependencies:
   flutter_test:
