added getDiary call and added dependency for flutter_sec_storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_database: ^9.0.8
   http: ^0.13.4
   uuid: ^3.0.6
+  flutter_secure_storage: ^5.0.2
   
 
 dev_dependencies:
