added fancy picture

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
     - assets/img/undraw_Diary.png
     - assets/img/undraw_moments.png
     - assets/img/undraw_Segment_analysis.png
+    - assets/img/corner_img.PNG
    
 
 
