--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   uuid: ^3.0.6
   flutter_secure_storage: ^5.0.2
   flutter_calendar_carousel: ^2.1.0
+  pie_chart: ^5.3.0
   
 
 dev_dependencies:
