--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
     - assets/img/undraw_moments.png
     - assets/img/undraw_Segment_analysis.png
     - assets/img/corner_img.PNG
+    - assets/img/google.png
    
 
 
