added reg function

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
     - assets/img/undraw_Segment_analysis.png
     - assets/img/corner_img.PNG
     - assets/img/google.png
+    - assets/img/books_wallpaper.jpg
    
 
 
