added fancy background img for new login view

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - assets/img/corner_img.PNG
     - assets/img/google.png
     - assets/img/books_wallpaper.jpg
+    - assets/img/bookshelf.jpg
    
 
 
