--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   flutter_calendar_carousel: ^2.1.0
   pie_chart: ^5.3.0
+  showcaseview: ^1.1.5
   
 
 dev_dependencies:
