--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   flutter_calendar_carousel: ^2.1.0
   pie_chart: ^5.3.0
+  string_encryption: ^2.0.5
+  flutter_string_encryption: ^0.3.1
   
 
 dev_dependencies:
